<resources>
    <string name="app_name">KofaxHub</string>
    <string name="submit">Submit</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="to">To:</string>
    <string name="Timeoftobe">Time-Off to be</string>
    <string name="WithPay">With Pay</string>
    <string name="WithoutPay">Without Pay</string>
    <string name="Reason">Reason :</string>
    <string name="please_select_leave_type">Please select leave type</string>
    <string name="leave_type_Vacation">Vacation</string>
    <string name="leave_type_CompOff">Comp-off</string>
    <string name="leave_type_Bereavement">Bereavement</string>
    <string name="leave_type_Business_trip">Business Trip</string>
    <string name="leave_type_ForgotId">Forgot Id</string>
    <string name="leave_type_LossOfPay">Loss Of Pay</string>
    <string name="leave_type_Maternity">Maternity</string>
    <string name="leave_type_Paternity">Paternity</string>
    <string name="leave_type_WorkFromHome">Work From Home</string>
    <string name="HalfDayLeave">Half Day Leave</string>
    <string name="loading">Loading...</string>
    <!--screen titles-->
    <string name="new_request_title">New Request</string>
    <string name="pending_requests_title">Pending Requests</string>
    <string name="pending_request_title">Pending Request</string>
    <string name="user_requests_title">User Requests</string>
    <string name="welcome">Welcome :</string>
</resources>
