<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_leave_request"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLexmarkHub_theam"
    tools:context="com.kofax.lexmarkhub.Activities.NewLeaveRequestActivity">

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:padding="10dp"
        android:layout_margin="15dp"
        android:background="@drawable/rounded_buttons"
        android:layout_alignParentBottom="true"
        android:onClick="submitRequestAction"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <TextView
            android:id="@+id/toTextView"
            android:background="@drawable/roundedrectangle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextBoxStyle"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/to"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/color_button_background"
            android:layout_margin="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_marginRight="5dp"
                android:background="@drawable/roundedrectangle"
                android:gravity="center">
                <ImageView
                    android:id="@+id/startDateView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/calender"
                    android:layout_marginLeft="10dp"/>
                <TextView
                    android:id="@+id/fromdate_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextBoxStyle"
                    android:paddingLeft="5dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:background="@drawable/roundedrectangle"
                android:gravity="center">
                <ImageView
                    android:id="@+id/endDateView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/calender"
                    android:layout_marginLeft="10dp"/>
                <TextView
                    android:id="@+id/todate_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextBoxStyle"
                    android:paddingLeft="5dp" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextBoxStyle"
                android:textSize="18dp"
                android:text="@string/HalfDayLeave"/>
            <CheckBox
                android:id="@+id/HDL_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:id="@+id/reason_txtView"
                android:background="@drawable/roundedrectangle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/TextBoxStyle"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/Reason"/>
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/dropdown"
                android:background="@drawable/roundedrectangle"
                android:padding="10dp"
                android:layout_marginLeft="5dp"
                android:onClick="leaveTypeAction"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedrectangle"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/notes"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                />
            <EditText
                android:id="@+id/notes_view"
                android:layout_width = "match_parent"
                android:layout_height = "150dp"
                android:background = "#80F6F2C0"
                android:layout_margin = "5dp"
                android:gravity = "top"
                android:textSize = "20sp"
                android:digits="abcdefghijklmnopqrstuvwxyz1234567890.,() "/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
